💄 Fixed responsiveness issues with flex-wrap

--- a/main.css
+++ b/main.css
@@ -11,6 +11,7 @@ body {
   background: rgb(29, 29, 29);
   color: white;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   padding: 2em 10em;
@@ -28,20 +29,27 @@ a {
 }
 .main {
   display: flex;
-  height: 75vh;
+  flex-wrap: wrap;
+  min-height: 75vh;
   gap: 3em;
   padding: 2em 10em;
   align-items: center;
   text-align: center;
+  justify-content: center;
 }
+
 .main-img {
   width: 300px;
+}
+
+.main .content {
+  max-width: 550px;
 }
 
 .section {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
   gap: 2em;
   padding: 2em 10em;
   align-items: center;
@@ -54,6 +62,8 @@ a {
 
 .card-container {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   gap: 2em;
 }
 
@@ -74,6 +84,7 @@ a {
 
 .gallery {
   display: flex;
+  justify-content: center;
   gap: 1em;
   flex-wrap: wrap;
 }
